--- a/stylesheets/base/_typography.scss
+++ b/stylesheets/base/_typography.scss
@@ -113,5 +113,5 @@ h3{
   font-family: $rift;
   font-weight: $light;
   letter-spacing: $body-spacing;
-  margin-right: 20px; 
+  margin-right: 10px; 
 }
