--- a/stylesheets/base/_variables.scss
+++ b/stylesheets/base/_variables.scss
@@ -33,4 +33,4 @@ $body-font: $light 16px/1.5 'Merriweather', serif;
 $large: "(min-width: 830px)";
 
 //Small Screens
-$medium: "(min-width: 500px)";
+$medium: "(min-width: 520px)";
